Fixed #top wrap

--- a/style.css
+++ b/style.css
@@ -9,12 +9,13 @@ body { background: #fff; font-family: Arial, Helvetica, sans-serif; font-size: 1
 
 .wrap { padding: 0; width: 980px; margin: 0 auto; text-align: left; }
 
-#top { position: relative; width: 100%; background: url(img/top-bg.jpg) repeat-x; height: 17px;  }
+#top { width: 100%; background: url(img/top-bg.jpg) repeat-x; height: 17px;  }
 #nav { height: 27px; padding: 50px 0 0 34px; background: url(img/menu-bg.jpg) no-repeat; }
 #banner { margin: 20px auto 0 auto; padding: 5px 15px 0; width: 950px; height: 385px; background: url(img/slide-bg.jpg) no-repeat; }
 #content { min-height: 100px; height: auto !important; height: 100px;  }
 #footer  { width: 100%; height: 127px; background: url(img/footer-bg.jpg) repeat-x; }
 
+	#top .wrap { position: relative;  }
 	h1.logo {  z-index: 10000; position: absolute; left: 358px;  }
 	h1.logo a { display: block; width: 265px; height: 160px; background: url(img/logo.png) no-repeat; }
 	h1.logo span { display: none; }
